--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 [dependencies]
 binrw = "0.14.0"
 clap = { version = "4.5.4", features = ["derive"] }
+crossterm = "0.27.0"
 lz4 = "1.25.0"
+ratatui = { version = "0.26.3", features = ["all-widgets"] }
 regex = "1.10.4"
